--- a/updated calculator.html
+++ b/updated calculator.html
@@ -20,15 +20,16 @@ body {
 body {
     margin: 0;
     padding: 0;
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('bg.jpg'); 
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTdgdnptVSuR6KewsMza0GjvHPl3XMirFgGRsqPLMTAUkTbgVHGE_6bXAq6RJ03Ufva3kY&usqp=CAU'); 
     background-position: center;
     background-size: cover;
     min-height: 100vh;
+
 }
 
 h1 {
 	text-align: center;
-	color: #fff;
+	color: rgba(255, 240, 240, 0.89);
 	padding-top: 100px;
 	font-size: 42px;
 }
@@ -37,13 +38,14 @@ h1 {
     width: 250px;
     height: 410px;
     padding: 10px 20px;
-    border-radius: 4px;
+    border-radius: 40px;
     border: 5px solid white;
     position: relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin-top: -100px;
+    background-color: black;
 }
 
 .screen {
@@ -54,10 +56,10 @@ h1 {
     margin-top: 10px;
     font-size: 20px;
     background: none;
-    border-radius: 4px;
+    border-radius: 40px;
     border: 5px solid white;
     box-sizing: border-box;
-    color: white;
+    color: rgb(69, 114, 240);
 }
 
 .bn {
@@ -66,14 +68,15 @@ h1 {
     margin: 2px;
     padding: 9px;
     background: none;
-    border-radius: 4px;
+    border-radius: 40px;
     border: 5px solid white;
     box-sizing: border-box;
-    color: white;
-    font-size: 20px;
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTynJVgQWgEQdYlotusGBiRp96Am0wlsbDZFw&usqp=CAU');
+    font-size: 30px;
     outline: none;
     transition: .5s;
     cursor: pointer;
+    color:black;
 }
 
 .bn:hover {
